--- a/kaew-wan-frontend/src/assets/main.css
+++ b/kaew-wan-frontend/src/assets/main.css
@@ -5,3 +5,20 @@
 .webkit-box {
   display: -webkit-box;
 }
+
+@layer base {
+  h1 {
+    @apply text-2xl;
+  }
+  h2 {
+    @apply text-xl;
+  }
+  h3 {
+    @apply text-lg;
+  }
+  ol,
+  ul {
+    list-style: circle;
+    margin: 0 0 0 1.25em;
+  }
+}
